--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			<div class="box">
 				<p>I have always had a fascination with the brain, as evidenced by my years of becoming a guinea pig for my own amusement. <br/>
 				Some endeavors include lucid dreaming, tDCS self-stimulation, nootropics, mnemonics/memory palaces, and keeping an excel doc of all media consumption. <br/>
-				<p>I use Cerego, a spaced repetition website to maintain knowledge of cog neuro topics and important research articles.
+				<p>I use Cerego, a spaced repetition website, to maintain knowledge of cog neuro topics and important research articles.
 				You can check out my spaced repetition database <a href="https://cerego.com/sets/753349" target="_blank">here</a>, and my prototype wikipedia database of neuro notes <a href="https://en.wikipedia.org/wiki/User:Paul_Steven_Scotti" target="_blank">here</a>. (I've since replaced it with OneNote.) <br/> </p>
 				<p>My experience in research comes from independent projects working with Dr. Sarah Shomstein and Dr. Stephen Mitroff. <br/>
 				I am proficient in MATLAB for experimental design as well as data analysis.<br/> </p>
@@ -127,10 +127,10 @@
 			<div class="row">
 				<div class="col-xs-12 col-md-9 description">
 					<ul>
-						<li><p>Find a graduate program related to my interests! Hopefully pursue a PhD!</p></li>
+						<li><p>Find a graduate program related to my interests! Pursue a PhD!</p></li>
 						<li><p>I believe the integration of disparate scientific fields is paramount to significant research discoveries and hope to work towards this goal.</p></li>
 						<li><p>Similar to duolingo in mass learning of language, I hope to use a similar protocol to foster research education and peer review.</p></li>
-						<li><p>Hopefully I may inspire others to appreciate how much we still do not understand about the brain, and possibly infect them with my current neuroscientific bug.</p></li>
+						<li><p>Hopefully, I may inspire others to appreciate how much we still do not understand about the brain, and possibly infect them with my current neuroscientific bug.</p></li>
 					</ul>
 				</div>
 				<div class="col-xs-12 col-md-3">
