--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<p>I have always had a fascination with the brain, as evidenced by my years of becoming a guinea pig for my own amusement. <br/>
 				Some endeavors include lucid dreaming, tDCS self-stimulation, nootropics, mnemonics/memory palaces, and keeping an excel doc of all media consumption. <br/>
 				<p>I use Cerego, a spaced repetition website, to maintain knowledge of cog neuro topics and important research articles.
-				You can check out my spaced repetition database <a href="https://cerego.com/sets/753349" target="_blank">here</a>, and my prototype wikipedia database of neuro notes <a href="https://en.wikipedia.org/wiki/User:Paul_Steven_Scotti" target="_blank">here</a>. (I've since replaced it with OneNote.) <br/> </p>
+				You can check out my spaced repetition database <a href="https://cerego.com/sets/753349" target="_blank">here</a>, and my prototype wikipedia page of neuro notes <a href="https://en.wikipedia.org/wiki/User:Paul_Steven_Scotti" target="_blank">here</a>. (I've since replaced it with OneNote.) <br/> </p>
 				<p>My experience in research comes from independent projects working with Dr. Sarah Shomstein and Dr. Stephen Mitroff. <br/>
 				I am proficient in MATLAB for experimental design as well as data analysis. <br/> </p>
 			</div>
