--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 				<div class="col-xs-12 col-md-9 description">
 					<ul>
 						<li><p>Find a graduate program related to my interests! Pursue a PhD!</p></li>
-						<li><p>I believe the integration of disparate scientific fields is paramount to significant research discoveries and hope to work towards this goal.</p></li>
+						<li><p>I believe the integration of scientific fields is paramount to significant research discoveries and hope to work towards this goal.</p></li>
 						<li><p>Similar to duolingo in mass learning of language, I hope to use a similar protocol to foster research education and peer review.</p></li>
 						<li><p>Hopefully, I may inspire others to appreciate how much we still do not understand about the brain, and possibly infect them with my current neuroscientific bug.</p></li>
 					</ul>
