--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 			<div class="box image">
 				<a target="_blank"><img src="img/brain.png" alt="fMRI at Georgetown Medical Center"/></a>
 				<p>Actual image of my brain. It appears to be in working order.</p>
+				<a target="_blank"><img src="img/brainscan.mp4" alt="MRI at York University"/></a>
 			</div>
 		</div>
 	</section>
