--- a/index.html
+++ b/index.html
@@ -104,9 +104,8 @@
 				I am proficient in MATLAB for experimental design as well as data analysis. <br/> </p>
 			</div>
 			<div class="box image">
-				<a target="_blank"><img src="img/brain.png" alt="fMRI at Georgetown Medical Center"/></a>
+				<a target="_blank"><img src="img/brain.png" alt="fMRI at Georgetown Medical Center"/></a> <a target="_blank"><img src="img/brainscan.gif" alt="MRI at York University"/></a>
 				<p>Actual image of my brain. It appears to be in working order.</p>
-				<a target="_blank"><img src="img/brainscan.mp4" alt="MRI at York University"/></a>
 			</div>
 		</div>
 	</section>
