--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<div class="box image">
 				<a target="_blank"><img src="img/brain.png" alt="fMRI at Georgetown Medical Center" style="width:395px;height:200px;/></a> 
 				<a target="_blank"><img src="img/brainscan.gif" alt="MRI at York University" style="width:200px;height:200px;"/></a>
-				<p>Actual image of my brain. It appears to be in working order.</p>
+				<p>My brain. It appears to be in working order.</p>
 			</div>
 		</div>
 	</section>
