--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<h2>Cognitive Neuroscience Undergraduate</h2>
 			</div>
 			<div class="box">
-				<p id="landing">I've become captivated by the mechanisms underlying visual attention and neuroscience in general for the past several years. <br/>
+				<p id="landing">I've become captivated by the mechanisms underlying visual attention and learning in general for the past several years. <br/>
 				I have been working on research related to real-world object-based attention and predictive visual search. <br/>
 				Besides research, I enjoy meditation, producing music, and playing board games!</p>
 			</div>
