--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 					</ul>
 				</div>
 				<div class="col-xs-12 col-md-3">
-					<a><img src="img/me2.jpg" alt="profile"/></a>
+					<a><img src="img/profile_picture.jpg" alt="profile"/></a>
 				</div>
 			</div>
 		</div>
