--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<hr color="black">
 			</div>
 			<div class="box">
-				<p>I remember when I was 15 and programmed my <a href="https://itunes.apple.com/us/app/popcorn-soda-...-murder/id485451731?mt=8" target="_blank">first commercial app</a>, exposing me not only to coding, but also to the exhilaration one feels in formulating an idea in your head and seeing it through to completion.</b>
+				<p>When I was 15, I programmed my <a href="https://itunes.apple.com/us/app/popcorn-soda-...-murder/id485451731?mt=8" target="_blank">first commercial app</a>, exposing me not only to coding, but also to the exhilaration one feels in formulating an idea in your head and seeing it through to completion.</b>
 				Here are some goals that I currently have:</b></p>
 			</div>
 			<br/>
